--- a/exo1jq.html
+++ b/exo1jq.html
@@ -5,8 +5,8 @@
     <title>exo 1 partie 3 jquery</title>
   </head>
   <body>
-<p type="text" name="text" id="text"></p>
-    <button type="button" name="button" id="button">+1 !</button>
+    <label for="text">Nombre de clics :</label><input type="text" name="text" id="text" />
+    <button name="button" id="button">+1 !</button>
 
     <script src="assets\js\jquery-3.3.1.min.js"></script>
     <script src="assets/js/exo1jq.js"></script>
